Fix height issues on mobile & change background colour.

--- a/css/main.css
+++ b/css/main.css
@@ -1,91 +1,96 @@
-html, body {
-  height: 100vh;
-  --primary: #25D5B9;
-  --bg-light: #F3F5F7;
-  --bg-dark: #D3D5D7;
+html,
+body {
+    height: 100%;
+    --primary: #25D5B9;
+    --bg-light: #b5bdc8;
+    --bg-dark: #28343b;
+    --bg-card: #fbfbfb;
 }
 
-*, *:before, *:after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  background: var(--bg-light);
-  background: linear-gradient(to bottom, var(--bg-light) 0%, var(--bg-dark) 100%);
+    background: var(--bg-light);
+    background: linear-gradient(to bottom, var(--bg-light) 0%, var(--bg-dark) 100%);
+    min-height: 100%;
 }
 
 .wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 .container {
-  width: 250px;
-  height: 340px;
-  position: relative;
-  perspective: 800px;
+    width: 250px;
+    height: 340px;
+    position: relative;
+    perspective: 800px;
 }
 
 .card {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  transition: transform 1s;
-  transform-style: preserve-3d;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: transform 1s;
+    transform-style: preserve-3d;
 }
 
 .card div {
-  display: block;
-  height: 100%;
-  width: 100%;
-  color: var(--bg-light);
-  text-align: center;
-  border-radius: .5em;
-  position: absolute;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
+    display: block;
+    height: 100%;
+    width: 100%;
+    color: var(--bg-light);
+    text-align: center;
+    border-radius: .5em;
+    position: absolute;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .card .front {
-  background: #333;
+    background: var(--bg-card);
 }
 
 .card .back {
-  background: var(--primary);
-  transform: rotateY(180deg);
+    background: var(--primary);
+    transform: rotateY(180deg);
 }
 
 .card .back:before {
-  content: '';
-  position: absolute;
-  top: 25%;
-  left: 25%;
-  width: 50%;
-  height: 50%;
-  background: url('../img/logo.svg') no-repeat center;
-  background-size: contain;
+    content: '';
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
+    background: url('../img/logo.svg') no-repeat center;
+    background-size: contain;
 }
 
 .card.flipped {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 .card .value {
-  color: var(--bg-light);
-  font-weight: bold;
-  font-size: 140px;
-  position: absolute;
-  top: 50%;
-  margin-top: -.7em;
+    color: var(--bg-light);
+    font-weight: bold;
+    font-size: 140px;
+    position: absolute;
+    top: 50%;
+    margin-top: -.7em;
 }
 
 .card .desc {
-  font-family: sans-serif;
-  color: var(--bg-dark);
-  position: absolute;
-  top: calc(50% + 3em);
+    font-family: sans-serif;
+    color: var(--bg-dark);
+    position: absolute;
+    top: calc(50% + 3em);
 }
